Fix navigation text overlap

--- a/src/WebApp/wwwroot/css/site.css
+++ b/src/WebApp/wwwroot/css/site.css
@@ -71,7 +71,7 @@ app {
 
     .sidebar .nav-item {
         font-size: 0.9rem;
-        padding-bottom: 0.5rem;
+        padding-bottom: 1rem;
     }
 
         .sidebar .nav-item:first-of-type {
@@ -85,10 +85,8 @@ app {
         .sidebar .nav-item a {
             color: #d7d7d7;
             border-radius: 4px;
-            height: 3rem;
             display: flex;
             align-items: center;
-            line-height: 3rem;
         }
 
             .sidebar .nav-item a.active {
